# ruffle-ios

./: .gitignore  Cargo.toml  Info.plist  README.md  build-in-xcode.sh  ruffle-ios.entitlements  rust-toolchain.toml
.github/workflows/: build-unsigned-ipa.yml
Base.lproj/: Main.storyboard
Ruffle.xcdatamodeld/Ruffle.xcdatamodel/: contents
docs/superpowers/plans/: 2026-07-23-unsigned-ipa-workflow.md
docs/superpowers/specs/: 2026-07-23-unsigned-ipa-workflow-design.md
file-icons/: ATTRIBUTION.md  document_ruf.icns
file-icons/file-icons.xcassets/document_ruf.imageset/: Contents.json
file-icons/file-icons.xcassets/document_swf.imageset/: Contents.json
ruffle-ios.xcodeproj/: project.pbxproj
src/: add_controller.rs  app_delegate.rs  document.rs  edit_controller.rs  lib.rs  library_controller.rs  player_controller.rs  player_view.rs  scene_delegate.rs  storage.rs  storyboard_connections.h
