[package]
name = "ruffle-ios"
version = "0.1.0"
authors = ["Mads Marquart <mads@marquart.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.81"
publish = false

[features]
default = ["render_debug_labels"]
render_debug_labels = ["ruffle_render_wgpu/render_debug_labels"]

[dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-core-data = "0.3"
objc2-core-foundation = "0.3"
objc2-foundation = "0.3"
objc2-ui-kit = "0.3"
objc2-metal = "0.3"
objc2-quartz-core = "0.3"

ruffle_core = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master", features = [
    "audio",
    "symphonia",
    "mp3",
    "nellymoser",
    "lzma",
    "default_compatibility_rules",
    "default_font",
] }
ruffle_render = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master" }
ruffle_render_wgpu = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master" }
ruffle_video = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master" }
ruffle_video_software = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master" }
ruffle_frontend_utils = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master", features = [
    "cpal",
] }
flv-rs = { git = "https://github.com/ruffle-rs/ruffle.git", branch = "master" }

wgpu = "25.0.2"
cpal = "0.15.3"
url = "2.5.2"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
libc = "0.2.158"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-oslog = "0.3.0"

[package.metadata.bundle.bin.run_swf]
name = "Ruffle"
identifier = "rs.ruffle.ios-dev"

[patch."https://github.com/ruffle-rs/ruffle.git"]
# Override Ruffle for local development.
# ruffle_core = { path = "../ruffle/core" }
# ruffle_render = { path = "../ruffle/render" }
# ruffle_render_wgpu = { path = "../ruffle/render/wgpu" }
# ruffle_video = { path = "../ruffle/video" }
# ruffle_video_software = { path = "../ruffle/video/software" }
# ruffle_frontend_utils = { path = "../ruffle/frontend-utils" }
# flv-rs = { path = "../ruffle/flv" }

[patch.crates-io]
# Fix broken Mac Catalyst.
cc = { git = "https://github.com/madsmtm/cc-rs.git", branch = "macabi" }

# visionOS support
# wgpu = { path = "../wgpu/wgpu" }
# naga = { path = "../wgpu/naga" }
# Cannot use git, see https://github.com/briansmith/ring/issues/2144
# ring = { git = "https://github.com/briansmith/ring.git", rev = "2bec9b2e057416e8f58f2ad8d47ccc9599ea6146" }
